<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">TV</string>
    <string name="live_pass">Pass</string>
    <string name="live_refresh">Refresh</string>
    <string name="live_line">Line <xliff:g name="name">%s</xliff:g></string>
    <string name="live_no_epg">00:00 - 23:59 暂无节目信息</string>
    <string name="detail_title"><xliff:g name="name">%s</xliff:g> : <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_site">Site: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_year">Year: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_area">Area: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_type">Type: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_director">Director: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_actor">Actor: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_content">Summary: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_desc">Summary</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_episode_reverse">Reverse</string>
    <string name="detail_episode_forward">Forward</string>
    <string name="detail_episode_view_grid">Grid</string>
    <string name="detail_episode_view_list">List</string>
    <string name="detail_episode_view_grid_action">Switch to grid</string>
    <string name="detail_episode_view_list_action">Switch to list</string>
    <string name="keep">Keep</string>
    <string name="keep_add">Added</string>
    <string name="keep_del">Removed</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_op">OP</string>
    <string name="play_ed">ED</string>
    <string name="play_exo">EXO</string>
    <string name="play_next">Next</string>
    <string name="play_prev">Prev</string>
    <string name="play_stop">Stop</string>
    <string name="play_repeat">Repeat</string>
    <string name="play_forward">→</string>
    <string name="play_backward">←</string>
    <string name="play_speed">1.00</string>
    <string name="play_reset">Reset</string>
    <string name="play_decode">Hard</string>
    <string name="play_timer">Timer</string>
    <string name="play_title">Chapter</string>
    <string name="play_scale">Default</string>
    <string name="play_lut">LUT</string>
    <string name="play_config">Config</string>
    <string name="play_cast">Cast</string>
    <string name="play_change">Change</string>
    <string name="play_search">Search</string>
    <string name="play_fullscreen">Fullscreen</string>
    <string name="play_exit_fullscreen">Exit full</string>
    <string name="play_invert">Invert</string>
    <string name="play_across">Across</string>
    <string name="play_reverse">Reverse</string>
    <string name="play_track_text">Text</string>
    <string name="play_track_audio">Audio</string>
    <string name="play_track_video">Video</string>
    <string name="play_track_disable_subtitle">Subtitle off</string>
    <string name="offset_text">Text offset</string>
    <string name="offset_audio">Audio offset</string>
    <string name="offset_setting">Offset settings</string>
    <string name="play_forward_hint">Normal play switched</string>
    <string name="play_backward_hint">Reverse play switched</string>
    <string name="play_ready">Ready to play: <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_flag">Switching flag to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_site">Switching site to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_parse">Switching parse to <xliff:g name="name">%s</xliff:g></string>
    <string name="danmaku">Danmaku</string>
    <string name="danmaku_select">Select danmaku</string>
    <string name="danmaku_setting">Danmaku setting</string>
    <string name="danmaku_text_size">Text scale</string>
    <string name="danmaku_transparency">Opacity</string>
    <string name="danmaku_text_bold">Bold</string>
    <string name="danmaku_style_mode">Text style</string>
    <string name="danmaku_style_none">None</string>
    <string name="danmaku_style_shadow">Shadow</string>
    <string name="danmaku_style_stroke">Stroke</string>
    <string name="danmaku_style_projection">Projection</string>
    <string name="danmaku_shadow_transparency">Shadow opacity</string>
    <string name="danmaku_stroke_width">Stroke width</string>
    <string name="danmaku_projection_offset_x">Projection offset X</string>
    <string name="danmaku_projection_offset_y">Projection offset Y</string>
    <string name="danmaku_projection_transparency">Projection opacity</string>
    <string name="danmaku_color_mode">Color mode</string>
    <string name="danmaku_color_default">Default</string>
    <string name="danmaku_color_colorful">Colorful</string>
    <string name="danmaku_color_gradient">Gradient</string>
    <string name="danmaku_color_override_hint">Original colors will be ignored</string>
    <string name="danmaku_auto">Auto</string>
    <string name="danmaku_duration">Scroll duration</string>
    <string name="danmaku_fixed_duration">Fixed duration</string>
    <string name="danmaku_time_offset">Time offset</string>
    <string name="danmaku_max_on_screen">Max on screen</string>
    <string name="danmaku_scroll_area_ratio">Scroll area</string>
    <string name="danmaku_max_scroll_lines">Max scroll rows</string>
    <string name="danmaku_max_top_lines">Max top rows</string>
    <string name="danmaku_max_bottom_lines">Max bottom rows</string>
    <string name="danmaku_line_spacing">Line gap</string>
    <string name="danmaku_scroll_gap_ratio">Row gap</string>
    <string name="danmaku_show_scroll">Scrolling</string>
    <string name="danmaku_show_top">Top pinned</string>
    <string name="danmaku_show_bottom">Bottom pinned</string>
    <string name="danmaku_show_reverse">Reverse scroll</string>
    <string name="danmaku_show_positioned">Positioned</string>
    <string name="danmaku_show_subtitle">Subtitle type</string>
    <string name="danmaku_show_special">Special type</string>
    <string name="danmaku_section_appearance">Appearance</string>
    <string name="danmaku_section_display">Display</string>
    <string name="danmaku_section_timing">Timing</string>
    <string name="danmaku_section_density">Density</string>
    <string name="danmaku_reset">Reset</string>
    <string name="parse">Parse</string>
    <string name="parse_god">Super</string>
    <string name="parse_from">Parse from: <xliff:g name="name">%s</xliff:g></string>
    <string name="push">Push</string>
    <string name="setting_personal">Personal</string>
    <string name="setting_play_back_to_detail">Return playback to detail</string>
    <string name="setting_search_ui">Search layout</string>
    <string name="setting_search_column">Search results per row</string>
    <string name="control_display">Display</string>
    <string name="display_time">Time</string>
    <string name="display_traffic">Speed</string>
    <string name="display_size">Resolution</string>
    <string name="display_progress">Progress</string>
    <string name="display_mini">Mini</string>
    <string name="display_title">Title</string>
    <string name="detail_tmdb_cast">Cast</string>
    <string name="detail_person_biography">Biography</string>
    <string name="detail_person_works">Works</string>
</resources>