<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/control_display"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display_time"
            style="@style/Control"
            android:text="@string/display_time" />

        <TextView
            android:id="@+id/display_traffic"
            style="@style/Control"
            android:text="@string/display_traffic" />

        <TextView
            android:id="@+id/display_size"
            style="@style/Control"
            android:text="@string/display_size" />

        <TextView
            android:id="@+id/display_progress"
            style="@style/Control"
            android:text="@string/display_progress" />

        <TextView
            android:id="@+id/display_mini"
            style="@style/Control"
            android:text="@string/display_mini" />

        <TextView
            android:id="@+id/display_title"
            style="@style/Control"
            android:text="@string/display_title" />

    </LinearLayout>
</LinearLayout>
